--- a/src/content/pagearticles/flex-links.mdx
+++ b/src/content/pagearticles/flex-links.mdx
@@ -53,6 +53,7 @@ subsection: "css"
 - [CSS Diner - Where we feast on CSS Selectors!](https://flukeout.github.io)
 - [Francesco Leardini "Train your CSS skills with online games"](https://itnext.io/train-your-css-skills-with-online-games-11067129338a)
 - [Unfolding the Box Model: Exploring CSS 3D Transforms](https://rupl.github.io/unfold/)
+- [CSS Diner - Where we feast on CSS Selectors!](https://flukeout.github.io/)
 
 ### Flexbox vs Grid
 
