change image size for twitter, still testing

--- a/src/content/pageindexes/index-turystyka.mdx
+++ b/src/content/pageindexes/index-turystyka.mdx
@@ -9,13 +9,13 @@ subsection: ""
 
 Od kilku lat zajmuję się turystyką:
 
-- 2011 przewodnik miejski wrocławski
-- 2012 pilot wycieczek oraz wychowawca wypoczynku
+- 2011 **przewodnik miejski wrocławski**
+- 2012 **pilot wycieczek** oraz wychowawca wypoczynku
 - 2013 First Certificate in English
 - 2014 szkolenie pilockie: Drezno
 - 2015 szkolenie pilockie: Paryż
 - 2016 szkolenie pilockie: Berlin i Poczdam
-- 2017 przewodnik górski sudecki
+- 2017 **przewodnik górski sudecki**
 - 2020 kurs praski
 - 2021-06-01 druga dawka szczepionki Pfizera
 
