update to BLOG ALMOST READY TO START

--- a/archive/TODO/articles/js.mdx
+++ b/archive/TODO/articles/js.mdx
@@ -1,8 +1,11 @@
 ---
-title: "IT JavaScript"
-comment: ""
-section: "it"
-subsection: "js"
+title: "IT JavaScript notatki"
+section: "blog"
+subsection: "it"
+date:
+edited:
+img: ../images/gatsby.jpg
+tags: js
 ---
 
 # IT JavaScript
