--- a/src/content/fbposts/04-09.mdx
+++ b/src/content/fbposts/04-09.mdx
@@ -72,6 +72,8 @@ Canaris dzień przed egzekucją przekazał wiadomość, że nie jest zdrajcą i 
 *Dietrich Bonhoeffer (1906-45).<br />
 By Bundesarchiv, Bild 146-1987-074-16 / CC-BY-SA 3.0, [CC BY-SA 3.0 de](https://creativecommons.org/licenses/by-sa/3.0/de/deed.en), [Link](https://commons.wikimedia.org/w/index.php?curid=5483382)*
 
+- TheUntoldPast ["The BRUTAL Execution Of Wilhelm Canaris - Hitler's Spymaster" [14:27]](https://www.youtube.com/watch?v=QVVO7qH-t-s)
+
 ### Georg Elser
 
 Tego samego dnia w KL Dachau został zabity Georg Elser organizator zamachu na Hitlera w Bürgerbräukeller w Monachium.
