--- a/archive/TODO/blogposts/gatsby-komponenty.mdx
+++ b/archive/TODO/blogposts/gatsby-komponenty.mdx
@@ -1,8 +1,8 @@
 ---
-title: "Gatsby - komponenty"
+title: "Gatsby cz. 3 - komponenty"
 section: "blog"
 subsection: "it"
-date: 2021-07-02
+date: 2021-07-21
 edited:
 image: ../images/Gatsby_Monogram.png
 tags: react, gatsby
@@ -40,7 +40,7 @@ Czyli chcemy mieć pięć różnych wyglądów strony. Do zarządzania układem 
 
 W poprzednim wpisie uruchomiliśmy podstawową stronę Gatsby'ego w środowisku deweloperskim. Każda z nich była oddzielną całością. Jeżeli chcielibśmy mieć takie same nagłówki, stopki czy system nawigacji to trzeba by go w każdej podstronie powwielać co już samo w sobie nie ma sensu. A co jeżeli byśmy chcieli w tym layoucie coś zmienić?
 
-Gatsby to React, a React to system wyświetlania komponentów, co więc jest oczywiste to komponenty służą do tworzenia wspólnych wspólnych, powtarzających się elementów layoutu i samego layoutu.
+Gatsby to React, a React to system wyświetlania [komponentów](https://reactjs.org/docs/components-and-props.html), co więc jest oczywiste to komponenty służą do tworzenia wspólnych wspólnych, powtarzających się elementów layoutu i samego layoutu.
 
 W tym odcinku:
 
@@ -49,12 +49,55 @@ W tym odcinku:
 - tworzenie podstrony
 - sterowanie elementami strony przy użyciu propsów
 
+### CSS
+
+Wprawdzie CSS będzie poświęcony odrębny wpis, ale tutaj będzie mowa o tworzeniu layoutu, a tego się nie da zrobić bez CSS.
+
+Jest to podstawowe narzędzie tworzenia layoutu.
+
+Czasem przy tym samym pliku layotu wystarczy zastosować różne CSS-y, żeby uzyskać zupełnie różne układy strony. Pierwszą popularną prezentacją możliwości CSS była strona [CSS Zen Garden](http://www.csszengarden.com/). Na tym etapie wystarczy użycie pliku layout.css i importowanie go do pliku strony, lub pliku layoutu. Trzeba tylko pamiętać że właściwością klasy w JS jest [className](https://developer.mozilla.org/en-US/docs/Web/API/Element/className).
+
+Ponadto pamiętajmy, że typowy układ strony jest prosty i przewidywalny. Patrząc od góry strona zaczyna się od nagłówka, potem mamy treść a na samym dole stopka. menu nawigacyjne może być częścią nagłówka lub może zostać umiezczone w pasku bocznym. Ten układ ma odzwieciedlenie w nowych, wprowadzonych z HTML5 tagach semantycznych: header, aside, main, article, footer, oraz nav.
+
+
+A tu wzmiankowany powyżej layout.css, który zawiera podstawowe reguły:
+
+**/src/components/layout.css**
+
+```css
+body {padding:0; margin:0;}
+
+.container {
+    max-width: 1300px;
+    margin: 0 auto;
+    min-height: 100vh;
+    display:flex;
+    flex-direction: column;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+div.container > main {flex:1; max-width: 1300px;}
+header > nav ul {display:flex; list-style-type: none; padding-left:0;}
+header > nav ul a {display:block; padding:10px 2rem; margin: 0 1rem;}
+main {display:flex; flex-direction: column;}
+p, li, a { word-wrap: break-word; }
+
+@media(min-width:800px) {
+    main {flex-direction: row;}
+    aside {flex-basis: 20rem; width: 20rem;}
+    article {flex:1; width:calc(100vw - 20rem)}
+}
+@media(min-width:1300px) {
+    article {width:calc(1300px - 20rem)}
+}
+```
+
 ### Layout.js
 
 Komponenty umieszczamy w katalogu /src/components. Jest to tylko konwencja, ale nie warto od niej odchodzić. Plik komponentu składa się z trzech elementów:
 
 - importów
-- deklaracji komponentu
+- deklaracji komponentu jako przypisanej do zmiennej funkcji strzałkowej
 - eksportu
 
 Wprawdzie od jakiegoś czasu w plikach Reacta nie trzeba importować samego Reacta, ale w Gatsbym ten wymóg jeszcze nie został usunięty. W poniższym pliku drugim importem jest layout.css, w którym zawieramy minimalną liczbę reguł obowiązujących dla całej strony.
@@ -86,39 +129,6 @@ const Layout = ({ children }) => {
 export default Layout
 ```
 
-A tu wzmiankowany powyżej layout.css, który zawiera podstawowe reguły:
-
-**/src/components/layout.css**
-
-```css
-body {padding:0; margin:0;}
-
-.container {
-    max-width: 1300px;
-    margin: 0 auto;
-    min-height: 100vh;
-    display:flex;
-    flex-direction: column;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-
-div.container > main {flex:1; max-width: 1300px;}
-
-header > nav ul {display:flex; list-style-type: none; padding-left:0;}
-header > nav ul a {display:block; padding:10px 2rem; margin: 0 1rem;}
-
-main {display:flex; flex-direction: column;}
-
-p, li, a { word-wrap: break-word; }
-pre {max-width: 100%; width:100%;}
-
-@media(min-width:800px) {
-    main {flex-direction: row;}
-    aside {flex-basis: 20rem; width: 20rem;}
-    article {flex:1; width:calc(1300px - 20rem)}
-}
-```
-
 Aplikacja layoutu do dowolnego pliku:
 
 **/src/pages/any-page-in-this-folder.js**
@@ -143,7 +153,7 @@ Poszczególne elementy layputu, powtarzalne, albo pełniące odrębne funkcje do
 Wprowadziłem tutaj dwie rzeczy:
 
 - import komponentu Link
-- Styled Components, najpierw trzeba zainstalować pakiet i deklarację umieścić w pliku gatsby-config, dokładniej to zostanie opisane w oddzielnym wpisie, tutaj chciałem tylko pokazac jak to wygląda w kodzie. Stworzony tu element StyledNav nadpisuje zwykły element nav i ma dokładnie te same reguły CSS, które zawarte były w layout.css.
+- Styled Components, najpierw trzeba zainstalować pakiet i deklarację umieścić w pliku gatsby-config, dokładniej to zostanie opisane w oddzielnym wpisie o CSS, tutaj chciałem tylko pokazac jak to wygląda w kodzie. Stworzony tu element StyledNav nadpisuje zwykły element nav i ma dokładnie te same reguły CSS, które zawarte były w layout.css.
 
 **/src/components/navlist.js**
 
@@ -194,8 +204,6 @@ export default Header
 Ok, tyle podstaw. Przejdźmy do przykładu.
 
 ### Strona i propsy
-
-Po pierwsze trzeba zaznaczyć, że podstawowym narzędziem tworzenia layoutu jest CSS. Czasem przy tym samym pliku layotu wystarczy zastosować różne CSS-y, żeby uzyskać zupełnie różne układy strony. Pierwszą popularną prezentacją możliwości CSS była strona [CSS Zen Garden](http://www.csszengarden.com/). Ponadto pamiętajmy, że typowy układ strony jest prosty i przewidywalny. Patrząc od góry strona zaczyna się od nagłówka, potem mamy treść a na samym dole stopka. menu nawigacyjne może być częścią nagłówka lub może zostać umiezczone w pasku bocznym. Ten układ ma odzwieciedlenie w nowych, wprowadzonych z HTML5 tagach semantycznych: header, aside, main, article, footer, oraz nav.
 
 Załóżmy jednak, że potrzebujemy różnych plików layoutu. Zresztą lepiej jest tak zrobić od razu, bo dzięki temu od razu mamy oddzielone składniki strony i jest to łatwiejsze do kontroli.
 
