--- a/src/content/fbarticles/japonia-bron.mdx
+++ b/src/content/fbarticles/japonia-bron.mdx
@@ -102,6 +102,8 @@ Projekt F-Go był realizowany pod auspicjami Marynarki i kierownictwem Bunsaku A
 
 W 1926 przemysłowiec Jun Noguchi rozpoczął produkcję amoniaku do nawozów sztucznych w Konan w Korei. Podczas tej produkcji wytwarzał ciężką wodę. Fu-Go mial dostawać 20 gramów tej wody miesięcznie, ale nie ma żadnych potwierdzonych informacji, żeby jej używali.
 
+- Dark Files ["Japan's Own Secret Atomic Bomb Project" [7:59]](https://www.youtube.com/watch?v=ENF6xfOqXHA)
+
 ### Kryptografia
 
 Amerykańską służbą kryptologiczną był Signal Intelligence Service (SIS). Od 1943 do września 1945 używająca nazwy Signal Security Agency. Potem przemianowane na Army Security Agency. Jeszcze przed wojną potrafili czytać japońskie szyfry, sowiecki system złamali dopiero w grudniu 1946 (Venona project).
